# asciivision

./: .env.example  .gitignore  Cargo.toml  README.md  WHAT_ID_DO.md  asciivision  handoff.md  install.sh
archive/mega-analytics/: Cargo.toml
archive/mega-cli/: Cargo.toml  DEMO.md  install.sh
archive/mega-cli/src/: chat.rs  main.rs
mega-analytics/src/: main.rs  video.rs
mega-cli/: .env.example  QUICKSTART.md  README.md  build.md
mega-cli/mega-analytics/: Cargo.toml
mega-cli/src/: ai.rs  db.rs  video.rs
src/: ai.rs  analytics.rs  client.rs  db.rs  effects.rs  games.rs  main.rs  memory.rs  message.rs  server.rs  shell.rs  sysmon.rs  theme.rs  tiles.rs  tiling.rs  tools.rs  video.rs  webcam.rs
