[package]
name = "asciivision"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["crossterm"] }
tachyonfx = "0.16"
ffmpeg-next = "8.0"
ffmpeg-sys-next = "8.0"
crossbeam-channel = "0.5"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
chrono = "0.4"
rand = "0.8"
sysinfo = "0.33"
tokio-stream = "0.1"
portable-pty = "0.9"
vt100 = { package = "vt100-ctt", version = "0.17.1", default-features = false }
