[package]
name = "mega-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mega-cli"
path = "src/main.rs"

[dependencies]
# Terminal UI & Effects (from asciivision)
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tachyonfx = "0.16"

# Video playback
ffmpeg-next = "8.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"

# HTTP client for APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
crossbeam-channel = "0.5"
futures = "0.3"
bytes = "1.9"

# Markdown rendering
termimad = "0.31"

# Environment variables
dotenvy = "0.15"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
